--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,5 @@
     <string name="app_name">Cocktail</string>
     <string name="app_desc">Search By Name Application</string>
     <string name="empty">Пусто</string>
+    <string name="resend">Перезагрузить</string>
 </resources>
